Fixed loading of images in Solitare game